Safari365 Prod/src/objects/ExchangeRateColumnMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <label>Base Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markup_Value__c</fullName>
        <label>Markup Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>SourceField</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <label>TargetField</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>ExchangeRateColumnMapping</label>
    <pluralLabel>ExchangeRateColumnMappings</pluralLabel>
</CustomObject>